src/main/java/com/example/Demo/errors/exception/files/InvalidFileTypeException.java
package com.example.Demo.errors.exception.files;

public class InvalidFileTypeException extends RuntimeException {
    public InvalidFileTypeException(String message) {
        super(message);
    }
}
